--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 click
 configobj
 keyring>=0.9.2
-# novaclient 3.0+ breaks compute API version 1.1 :(
-python-novaclient<3.0.0
+python-novaclient
 secretstorage
 six
